--- a/plugins/sql/Cargo.toml
+++ b/plugins/sql/Cargo.toml
@@ -20,6 +20,7 @@ futures-core = "0.3"
 sqlx = { version = "0.7", features = ["json", "time"] }
 time = "0.3"
 tokio = { version = "1", features = ["sync"] }
+glob = "0.3"
 
 [features]
 sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]
